tests/ui/const-generics/mgca/array-const-arg-type-mismatch.stderr
error: the constant `Bar` is not of type `Foo`
  --> $DIR/array-const-arg-type-mismatch.rs:13:14
   |
LL |     test::<{ [Bar] }>();
   |              ^^^^^ expected `Foo`, found `Bar`

error: aborting due to 1 previous error

